--- a/package.json
+++ b/package.json
@@ -17,14 +17,15 @@
     "next-sanity": "^9.8.30",
     "react": "18",
     "react-dom": "18",
-    "react-hook-form": "^7.54.0",
+    "react-hook-form": "^7.56.0",
     "react-icons": "^5.4.0",
     "react-query": "^3.39.3",
     "react-redux": "^9.1.2",
     "react-slideshow-image": "^4.3.2",
     "redux-persist": "^6.0.0",
     "sanity": "^3.68.3",
-    "styled-components": "^6.1.13"
+    "styled-components": "^6.1.13",
+    "zod": "^3.24.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
